Fixed cordova index.html

--- a/samples/cordova/www/index.html
+++ b/samples/cordova/www/index.html
@@ -19,7 +19,7 @@
 
                     <form id="add-item">
                         <button type="button" id="refresh">Refresh</button>
-                        <button type="submit">Add</bitton>
+                        <button type="submit">+</button>
                         <div>
                             <input type="text" id="new-item-text" placeholder="Enter new task" />
                         </div>
